--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@supabase/supabase-js": "^2.49.1",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.16",
     "framer-motion": "^10.17.0",
